# Shopping-Agent-V2

./: .gitignore  Amazon_Bot_Detection_Navigation_Ideas.md  Pending_Improvements.md  README.md  agent.py  api.py  debug_agent.py  debug_amazon.py  learnings.md  main.py  mcp_server.py  pyproject.toml  schemas.py  scraper.py  test_e2e.py  testing.md
extension/: manifest.json  popup.html  popup.js  results.css  results.html  results.js  styles.css
traces/: trace_10fb440e-162c-4613-a45e-291cebbeead6.md  trace_45ca68d4-3f19-4bf9-ae85-a1e08db80017.md  trace_549403d6-7a8b-4d57-9964-9489ad0359c8.md  trace_5b232b89-6397-4e61-9ec7-f3e534a8e323.md  trace_816a4708-7517-4f83-b094-e3a478fa630e.md  trace_82764604-d9b9-4bb2-a953-29114a9a6773.md  trace_96a2b837-54a8-42b5-ad75-9866082db538.md  trace_af5c589c-53a8-44d3-a99d-ec5b0a68ea30.md  trace_ba06a7f6-fff2-4db5-b9d8-f7b25008e9ed.md
