[project]
name = "shopping-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.47.0",
]
